添加关于对话框，添加文件详细信息(v0.1.0)

--- a/TideMediaPlayer/TideMediaPlayer.qrc
+++ b/TideMediaPlayer/TideMediaPlayer.qrc
@@ -1,4 +1,7 @@
 <RCC>
-    <qresource prefix="TideMediaPlayer">
-    </qresource>
+  <qresource prefix="TideMediaPlayer">
+    <file>Icons/TideMediaPlayer128.ico</file>
+    <file>Icons/TideMediaPlayerLogo.png</file>
+    <file>Icons/TideMediaPlayerLogo24.ico</file>
+  </qresource>
 </RCC>
