1) 播放按钮图形化 2) 新增还原屏幕按钮 3) 修复控制栏只有在鼠标点击时才可唤出的问题

--- a/TideMediaPlayer/TideMediaPlayer.qrc
+++ b/TideMediaPlayer/TideMediaPlayer.qrc
@@ -1,7 +1,14 @@
 <RCC>
-  <qresource prefix="TideMediaPlayer">
-    <file>Icons/TideMediaPlayer128.ico</file>
-    <file>Icons/TideMediaPlayerLogo.png</file>
-    <file>Icons/TideMediaPlayerLogo24.ico</file>
-  </qresource>
+    <qresource prefix="/TideMediaPlayer">
+        <file>Icons/TideMediaPlayer128.ico</file>
+        <file>Icons/TideMediaPlayerLogo.png</file>
+        <file>Icons/TideMediaPlayerLogo24.ico</file>
+    </qresource>
+    <qresource prefix="/PlayButton">
+        <file>Icons/PlayBtn-Pause.svg</file>
+        <file>Icons/PlayBtn-PauseHover.svg</file>
+        <file>Icons/PlayBtn-Play.svg</file>
+        <file>Icons/PlayBtn-PlayHover.svg</file>
+        <file>Icons/PlayBtn-Disable.svg</file>
+    </qresource>
 </RCC>
