--- a/TideMediaPlayer/TideMediaPlayer.ui
+++ b/TideMediaPlayer/TideMediaPlayer.ui
@@ -918,17 +918,17 @@ QMenuBar::item {
   </connection>
   <connection>
    <sender>horizontalSlider</sender>
-   <signal>valueChanged(int)</signal>
+   <signal>sliderReleased()</signal>
    <receiver>TideMediaPlayer</receiver>
-   <slot>sliderValueChanged(int)</slot>
+   <slot>sliderUserValueChanged()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>317</x>
-     <y>547</y>
+     <x>218</x>
+     <y>549</y>
     </hint>
     <hint type="destinationlabel">
-     <x>312</x>
-     <y>680</y>
+     <x>221</x>
+     <y>602</y>
     </hint>
    </hints>
   </connection>
@@ -938,6 +938,6 @@ QMenuBar::item {
   <slot>showAboutDialog()</slot>
   <slot>resetScale()</slot>
   <slot>showSetting()</slot>
-  <slot>sliderValueChanged(int)</slot>
+  <slot>sliderUserValueChanged()</slot>
  </slots>
 </ui>
