--- a/TideMediaPlayer/TideMediaPlayer.ui
+++ b/TideMediaPlayer/TideMediaPlayer.ui
@@ -1029,6 +1029,22 @@ QMenuBar::item {
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>doubleSpinBoxTripleSpeed</sender>
+   <signal>valueChanged(double)</signal>
+   <receiver>TideMediaPlayer</receiver>
+   <slot>speedRatioChanged(double)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>853</x>
+     <y>547</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>855</x>
+     <y>613</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>openFile()</slot>
@@ -1037,5 +1053,6 @@ QMenuBar::item {
   <slot>showSetting()</slot>
   <slot>sliderUserValueChanged()</slot>
   <slot>volumeValueChanged(int)</slot>
+  <slot>speedRatioChanged(double)</slot>
  </slots>
 </ui>
